# reader

./: CMakeLists.txt  README.md  USERSTORIES.md  meson.build
media/: engine.graphml
src/: CMakeLists.txt  Feed.vala  Reader.vala  ReaderContent.vala  ReaderController.vala  ReaderDataBase.vala  ReaderDataManager.vala  ReaderHeaderBar.vala  ReaderWelcome.vala  ReaderWindow.vala  ReaderWorkerpool.vala  meson.build  reader  workeroperation.vala
src/rss-engine/: BackgroundJob.vala  DataBase.vala  FetchRssJob.vala  Fetcher.vala  Workerpool.vala  meson.build
src/rss-engine/model/: Item.vala  Subscription.vala
vapi/: rss-glib-1.0.vapi
